2004-08-19  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Hammerstad and Jensen}):
	Documented coupled microstrip model by Hammerstad and Jensen and
	transmission line losses of coupled lines.

2004-08-17  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (section{Microstrip open}): Revisited
	microstrip open, step, corner and gap documentation.

2004-08-16  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* technical.tex (subsection{Small signal model}): Documented
	excess phase parameter of BJT model.

2004-08-15  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Jacobi method}): Documented
	Schmidt and v.Mises convergence criteria.

2004-08-14  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Noise model}): Documented
	small signal and noise model of the MOSFET device.

2004-08-12  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Gauss-Seidel method}): Documented
	Gauss-Seidel and Jacobi methods for solving linear equation
	systems (both iterative methods).
	(subsection{Convergence}): Made some additional remarks about
	convergence helpers.

2004-08-07  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Physical model}): Completed the
	documentation about the large signal and physical model of
	the MOSFET level 1.

2004-08-05  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (section{MOS Field-Effect Transistor}): 
	Started to document the MOSFET model.

2004-08-03  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Large signal model}): Fixed bug
	in Id model of junction FET.  Replaced the O of O. Jensen to
	the norwegian {\O}.

2004-08-01  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Mixed Two-Port matrix
	conversions}): Added the formulas for G to S and S to G
	transformations.
	(section{PN-Junction Diode}): Documented new model parameters
	'Fc', 'Cp', 'Isr' and 'Nr'.

2004-07-31  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Gauss-Jordan method}): Documented