@@ -1,0 +1,39 @@
+#FIG 3.2
+Landscape
+Center
+Inches
+Letter  
+100.00
+Single
+-2
+1200 2
+6 675 1125 2925 2475
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 825 1800 75 75 825 1800 900 1800
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 2775 1800 75 75 2775 1800 2850 1800
+2 2 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 1200 1200 2400 1200 2400 2400 1200 2400 1200 1200
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 1200 1800 900 1800
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 2700 1800 2400 1800
+4 1 0 50 0 0 24 0.0000 0 255 315 1800 1875 S'\001
+-6
+6 3900 1125 6150 2925
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 4050 1800 75 75 4050 1800 4125 1800
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 6000 1800 75 75 6000 1800 6075 1800
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 5025 2775 75 75 5025 2775 5100 2775
+2 2 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 4425 1200 5625 1200 5625 2400 4425 2400 4425 1200
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 4425 1800 4125 1800
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5925 1800 5625 1800
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5025 2400 5025 2700
+4 1 0 50 0 0 24 0.0000 0 255 195 5025 1875 S\001
+-6
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 1 1 2
+	1 1 2.00 120.00 240.00
+	1 1 2.00 120.00 240.00
+	 2775 1350 4050 1350
+4 1 0 50 0 0 20 0.0000 0 135 225 5025 3075 m\001
