@@ -19,7 +19,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
  *
- * $Id: mscorner.cpp,v 1.5 2004-08-19 19:44:24 ela Exp $
+ * $Id: mscorner.cpp,v 1.6 2004-08-20 10:45:36 ela Exp $
  *
  */
 
@@ -46,6 +46,7 @@
 mscorner::mscorner () : circuit (2) {
   type = CIR_MSCORNER;
   setVoltageSources (1);
+  setInternalVoltageSource (1);
 }
 
 void mscorner::initSP (spsolver *) {
