@@ -19,7 +19,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
  *
- * $Id: msstep.cpp,v 1.3 2004-08-19 19:44:24 ela Exp $
+ * $Id: msstep.cpp,v 1.4 2004-08-20 10:45:37 ela Exp $
  *
  */
 
@@ -47,6 +47,7 @@
 msstep::msstep () : circuit (2) {
   type = CIR_MSSTEP;
   setVoltageSources (1);
+  setInternalVoltageSource (1);
 }
 
 void msstep::calcSP (nr_double_t frequency) {
